# aiogram_calendar

./: example_bot.py  pyproject.toml  setup.py
aiogram_calendar/: dialog_calendar.py  simple_calendar.py
aiogram_calendar/tests/: test_dialog_calendar.py  test_simple_calendar.py
