[tool.poetry]
name = "aiogram_calendar"
version = "0.2.1"
description = "Simple Inline Calendar & Date Selection tool for Aiogram Telegram bots"
authors = ["Roman Poltorabatko (original by Andrew Nikolabay)"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/barabum0/aiogram_calendar"
keywords = ["Aiogram", "Telegram", "Bots", "Calendar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
